tests/ui/attributes/empty-repr.stderr
error: `#[repr]` attribute cannot be used on where predicates
  --> $DIR/empty-repr.rs:10:1
   |
LL | #[repr()]
   | ^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: unused attribute
  --> $DIR/empty-repr.rs:10:1
   |
LL | #[repr()]
   | ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect
note: the lint level is defined here
  --> $DIR/empty-repr.rs:4:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

